objects/CSC_Automation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSC Automations</relationshipLabel>
        <relationshipName>CSC_Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestFormula_FIeld__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestFormula FIeld</label>
        <type>Text</type>
    </fields>
    <description>This will store account Id whose Account service tier is changed.</description>
    <label>CSC Automation</label>
    <nameField>
        <displayFormat>CSC-{00000}</displayFormat>
        <label>CSC Automation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSC Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>